# nova_vive

./: README.md
SenseGlove-API/Core/SGCoreCpp/: LinkSGCoreCpp.cmake
SenseGlove-API/Core/SGCoreCpp/examples/BasicCpp/: CMakeLists.txt  main_sonny.cpp
SenseGlove-API/SenseCom/SenseCom_Linux/SenseCom/: sgc_l.sh  sgd_l.sh
vive_tracker/: CMakeLists.txt  MUJOCO_LOG.TXT  README.md
vive_tracker/scripts/: triad_openvr.py  vive_tracke.py  vive_tracke_win.py
